# atomic-red-team-docs

./: .gitignore  .pre-commit-config.yaml  README.md  next.config.js  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.js  theme.config.tsx
.github/workflows/: autoupdate.yaml  biome.yaml  lint.yaml  nextjs.yml
components/: artindex.tsx  atomicTests.tsx  atomics.tsx  card.tsx  logo.tsx  navigation.tsx  switcher.tsx
components/index/: art.tsx  beta.tsx  home.tsx  invoke.tsx
pages/: _app.mdx  _document.js  _meta.json  index.mdx  invoke-atomicredteam.mdx
pages/atomic-red-team/: _meta.json  api.md  beta.mdx  git-command-line.md  github-codespaces.md  index.md  index.mdx  issue.md  writing-cloud-atomics.md
pages/atomic-red-team/atomics/: T1003.001.md  T1003.002.md  T1003.003.md  T1003.004.md  T1003.005.md  T1003.006.md  T1003.007.md  T1003.008.md  T1003.md  T1005.md  T1006.md  T1007.md  T1010.md  T1012.md  T1014.md  T1016.md  T1018.md  T1020.md  T1021.001.md  T1021.002.md  T1027.md  (+276 more)
pages/atomics/: T1176.md  index.tsx
pages/docs/: _meta.json
pages/invoke-atomicredteam/: _meta.json  adversary-emulation.mdx  atomic-gui.mdx  check-prereqs.mdx  cleanup.mdx  continuous-atomic-testing.mdx  custom-input-arguments.mdx  docker-containers.mdx  execute-tests-locally.mdx  execute-tests-programatically.mdx  execute-tests-remotely.mdx  execution-hooks.mdx  execution-logging.mdx  getting-started.mdx  import-module.mdx  index.mdx  list-atomics.mdx  list.mdx  offline-installation.mdx  uninstall-module.mdx  windows-sandbox.mdx
public/: atomic_tests.json  atomics.json
(+45 files in other folders)
