[tool.poetry]
name = "atomic-red-team-docs"
version = "0.1.0"
description = ""
authors = []
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.0"
attackcti = "^0.4.0"
pyyaml = "^6.0.1"
pre-commit = "^3.6.2"

[tool.vulture]
paths = ["bin"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
